--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,11 @@
-.App {
+.container {
   text-align: center;
+  background-image:url(../src/bckgrd.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
